# learn-opengl

./: CMakeLists.txt  README.md  build.sh  main.cc  run.sh
doc/: Manual.md
src/: test_suite.cc  test_suite.h
